manifests/demo/demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels: 
        app: demo
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: rs-demo
        image:  rs/demo:latest
        ports:
          - name: http
            containerPort: 5900
        resources:
          requests: 
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 2048Mi
        volumeMounts:
          - name: persistent-storage
            mountPath: /rs-data
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-claim
