manifests/demo/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
spec: 
  type: ClusterIP
  selector:
    app: demo
  ports:
  - name: http
    port: 5900
    targetPort: 5900
